# quantum-cq

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: api_overview.md  ibm_real_testing.md  installation.md  navigation_encoder.md  navigation_v2_structural_encoding.md  notebook_cells.md  release_0_2_0.md  repository_layout.md
docs/architecture/: multi_engine_foundation.md  run_1_baseline.md  run_2_engine_contracts_catalog.md  run_3_hardware_abstraction_circuit_integration.md  run_4_2_pipeline_topology_coined_walk.md  run_4_mqt_unified_pipeline.md
docs/contracts/: navigation_v1.md
docs/engines/: capability_matrix.md  isolated_validation.md
examples/: basic_navigation.py  basic_state_encoding.py
notebooks/: quantum_cq_full_pipeline_navigation.ipynb  quantum_cq_getting_started.ipynb  quantum_cq_ibm_real_smoke.ipynb  quantum_cq_simple_api_lab.ipynb  quantum_cq_teoria_biblioteca_demo.ipynb
requirements/: all.txt  base.txt  dev.txt  notebook.txt
src/quantum_cq/: __init__.py  adapters.py  algorithms.py  (+21 more)
tests/: conftest.py  test_algorithms.py  test_circuit_layer.py  test_deutsch_algorithm.py  test_encodings.py  test_experiment_pipeline.py  test_handlers.py  test_ibm_real_smoke.py  test_import_contract.py  test_metrics.py  test_multi_engine_core.py  test_navigation_addressed.py  test_navigation_graph.py  test_navigation_selector.py  test_operator_layer.py  test_oracle_operator_algorithms.py  test_oracles_primitives.py  test_pipeline.py  test_project_structure.py  test_quantum_walk_mvp.py  test_run2_component_catalog.py  test_run2_engine_contracts.py  test_run3_circuit_service.py  test_run3_hardware_layer.py  test_run42_coined_quantum_walk.py  test_run42_pipeline_planning.py  test_run42_qiskit_topology.py  test_run43_corrective_contracts.py  test_run43_navigation_v2.py  test_run4_mqt_planning.py  test_run4_pipeline_contracts.py  test_selector.py  test_simple_api.py  test_tdd_contract_placeholders.py
(+67 files in other folders)
