[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-cq"
version = "0.1.1"
description = "Compact quantum circuit helpers, encodings, algorithms, navigation and Qiskit interop."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "José Yrikes de Oliveira Feitosa" },
]
keywords = ["quantum", "qiskit", "encoding", "quantum-circuits", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qiskit",
    "numpy",
    "packaging",
]

[project.optional-dependencies]
aer = ["qiskit-aer"]
ibm = ["qiskit-ibm-runtime"]
notebook = ["pandas", "matplotlib", "pylatexenc", "ipython", "ipywidgets"]
dev = ["pytest", "build", "twine"]
all = [
    "qiskit-aer",
    "qiskit-ibm-runtime",
    "pandas",
    "matplotlib",
    "pylatexenc",
    "ipython",
    "ipywidgets",
]

[project.urls]
Homepage = "https://github.com/jyrikes/quantum-cq"
Repository = "https://github.com/jyrikes/quantum-cq"
Issues = "https://github.com/jyrikes/quantum-cq/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "real_hardware: tests that submit jobs to IBM Quantum hardware",
    "ibm_real: opt-in integration tests that submit jobs to IBM Quantum hardware",
]
